# mtg_python_deckbuilder

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING_EDITORIAL.md  DECK_LIST_DISPLAY_FEATURE.md  DOCKER.md  DOCKER_HUB_DESCRIPTION.md  Dockerfile  GITHUB_RELEASE_CHECKLIST.md  LICENSE  README-cache.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_TEMPLATE.md  WINDOWS_DOCKER_GUIDE.md  _tmp_check_metrics.py  _tmp_run_catalog.ps1  _tmp_run_orchestrator.py  builder_utils.py  card_info.py  check_banned_cards.py  debug_bolt_scoring.py  debug_confirmation.py  debug_lightning.py  debug_popular_cards.py  deck_builder.py  deck_builder_2.py  diagnose-volumes.sh  docker-compose.interactive.yml  docker-compose.yml  dockerhub-docker-compose.yml  entrypoint.sh  exceptions.py  input_handler.py  main.py  main.spec  mtg_deckbuilder.spec  mypy.ini  (+38 more)
card_files/: ck_prices_cache.json  prices_cache.json  prices_cache.json.ts  similarity_cache.parquet  similarity_cache_metadata.json
code/: __init__.py  commander_exclusions.py  exceptions.py  headless_runner.py  input_handler.py  logging_util.py  main.py  non_interactive_test.py  path_util.py  price_check.py  random_util.py  settings.py  type_definitions.py  type_definitions_theme_catalog.py
config/: brackets.yml  deck.json  random_theme_exclusions.yml
csv_files/: abzan_cards.csv  azorius_cards.csv  bant_cards.csv  black_cards.csv  blue_cards.csv  boros_cards.csv  colorless_cards.csv  dimir_cards.csv  dune_cards.csv  esper_cards.csv  glint_cards.csv  golgari_cards.csv  green_cards.csv  grixis_cards.csv  gruul_cards.csv  ink_cards.csv  izzet_cards.csv  jeskai_cards.csv  jund_cards.csv  naya_cards.csv  orzhov_cards.csv  rakdos_cards.csv  red_cards.csv  selesnya_cards.csv  (+7 more)
(+667 files in other folders)
